# D1_Project

./: README.md  platformio.ini
embed/boards/: IlMatto.json
embed/lib/liblcd/: avrlcd.h  lcd.c
embed/src/: adc.c  adc.h  graph.c  graph.h  gui.c  gui.h  main.c  property.c  property.h  pwm.c  pwm.h  rotary.c  uart.c  uart.h
embed/src/UGUI/: ugui_config.h
host/: CMakeLists.txt  main.c
lib/liblcd/: lcd.h
src/: graph.c  graph.h  gui.c  gui.h  main.c  property.c  property.h  ring_buff.c  ring_buff.h  rotary.h  uart.c  uart.h
